--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "gatsby": "^2.26.1",
+    "gatsby-image": "^2.6.0",
     "gatsby-plugin-sass": "^2.6.0",
+    "gatsby-plugin-snipcart": "^1.1.2",
     "gatsby-source-sanity": "^6.0.4",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
