--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.6.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-sass": "^2.6.0",
     "gatsby-plugin-snipcart": "^1.1.2",
     "gatsby-source-sanity": "^6.0.4",
