--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "gatsby": "^2.26.1",
+    "gatsby": "^2.31.1",
     "gatsby-image": "^2.6.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-sass": "^2.6.0",
     "gatsby-plugin-snipcart": "^1.1.2",
-    "gatsby-source-sanity": "^6.0.4",
+    "gatsby-plugin-snipcart-advanced": "^1.0.1",
+    "gatsby-plugin-snipcartv3": "^2.3.3",
+    "gatsby-source-sanity": "^6.0.5",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
