--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -23,7 +23,9 @@
     "gatsby-plugin-snipcart": "^1.1.2",
     "gatsby-plugin-snipcart-advanced": "^1.0.1",
     "gatsby-plugin-snipcartv3": "^2.3.3",
+    "gatsby-source-filesystem": "^2.11.0",
     "gatsby-source-sanity": "^6.0.5",
+    "gatsby-transformer-json": "^2.11.0",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
