--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -28,7 +28,8 @@
     "gatsby-transformer-json": "^2.11.0",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-responsive-masonry": "^2.1.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
