--- a/internetshoppe/package.json
+++ b/internetshoppe/package.json
@@ -24,7 +24,8 @@
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2",
-    "react-icons": "^4.1.0"
+    "react-icons": "^4.1.0",
+    "sanity-plugin-asset-source-unsplash": "^0.1.3"
   },
   "devDependencies": {}
 }
