--- a/internetshoppe/package.json
+++ b/internetshoppe/package.json
@@ -17,6 +17,7 @@
     "@sanity/base": "^2.0.9",
     "@sanity/components": "^2.0.9",
     "@sanity/core": "^2.0.9",
+    "@sanity/dashboard": "^2.2.6",
     "@sanity/default-layout": "^2.0.9",
     "@sanity/default-login": "^2.0.9",
     "@sanity/desk-tool": "^2.0.9",
@@ -26,6 +27,5 @@
     "react-dom": "^16.2",
     "react-icons": "^4.1.0",
     "sanity-plugin-asset-source-unsplash": "^0.1.3"
-  },
-  "devDependencies": {}
+  }
 }
