--- a/internetshoppe/package.json
+++ b/internetshoppe/package.json
@@ -26,6 +26,7 @@
     "react": "^16.2",
     "react-dom": "^16.2",
     "react-icons": "^4.1.0",
-    "sanity-plugin-asset-source-unsplash": "^0.1.3"
+    "sanity-plugin-asset-source-unsplash": "^0.1.3",
+    "sanity-plugin-dashboard-widget-cats": "^0.0.2"
   }
 }
