--- a/internetshoppe/package.json
+++ b/internetshoppe/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.2",
     "react-icons": "^4.1.0",
     "sanity-plugin-asset-source-unsplash": "^0.1.3",
-    "sanity-plugin-dashboard-widget-cats": "^0.0.2"
+    "sanity-plugin-dashboard-widget-cats": "^0.0.2",
+    "sanity-plugin-dashboard-widget-document-list": "^0.0.11"
   }
 }
