--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -15,6 +15,7 @@
     "prebuild": "netlify-lambda install"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^2.0.7",
     "dotenv": "^8.2.0",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.6.0",
